fix icon + projects spacing

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -45,15 +45,7 @@
   }
   
   /* Floating Code Elements */
-  .floating-code {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    pointer-events: none;
-  }
+  
   
   .floating-code span {
     position: absolute;
@@ -140,7 +132,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
-    margin-bottom: 4rem;
+    margin-bottom: 0rem;
     align-items: start;
     
     
