--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 3rem 1rem;
+    margin-bottom: 0rem;
     
     gap: 1rem;
     border-top-left-radius: 55px;
@@ -40,12 +41,13 @@
     justify-content: center;
     overflow: hidden;
     transition: transform 0.3s ease;
+    border-radius: 15px;
   }
   
   .project-image {
     width: 100%;
     height: 100%;
-    border-radius: 1rem;
+    border-radius: 15px;
     object-fit: contain;       /* image always fits fully inside */
     background-size: contain;  /* if using background-image */
     background-repeat: no-repeat;
@@ -293,6 +295,9 @@
 /* Extra small screens / smartphones */
 @media (max-width: 480px) {
  
+  .projects-section {
+    margin-bottom: -5rem;
+  }
 
   .projects-title {
     font-size: 1rem;
